# static-python

./: .gitignore  .gitmodules  MANIFEST.in  build_bindings.py  docs.md  pybind.cpp  pyproject.toml  readme.md  setup.py
.github/workflows/: build.yml  sync-bindings.yml
_pipeline/: __init__.py
static/: .gitignore  Makefile  __init__.py  bench.py  readme.md
static/convert/: convert.py  pyproject.toml  readme
static/demo/: app.py  pyproject.toml  readme
static/demo/templates/: index.html
static/src/: binary.cpp  binary.h  embedder.cpp  embedder.h  main.cpp  server.cpp  server.h  tokenizer_wrapper.cpp  tokenizer_wrapper.h
static/train/: bench_sts.py  pyproject.toml  train.py
static/train/helpers/: embed.py  tokenizer.py
