[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]
